# lazerbot

./: README.md
lazerbot_control/: CMakeLists.txt  package.xml
lazerbot_control/config/: amcl_localization.yaml  gz_bridge.yaml  navigation.yaml  omni_wheel_drive_controller.yaml  slam_toolbox_mapping.yaml
lazerbot_description/: CMakeLists.txt  package.xml
lazerbot_description/config/: lazerbot.rviz
lazerbot_description/maps/: map_cubes.pgm  map_cubes.yaml
lazerbot_description/meshes/: arm_base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl
lazerbot_description/urdf/: arm.gazebo  arm.xacro  gazebo.urdf.xacro  lazerbot.urdf.xacro  materials.urdf.xacro  ros2_control.urdf.xacro  wheel.urdf.xacro
lazerbot_description/worlds/: cubes.sdf
lazerbot_launch/: CMakeLists.txt  package.xml
lazerbot_launch/launch/: lazerbot.launch.py  mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py  start_moveit.launch.py  world.launch.py
lazerbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lazerbot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  lazerbot.ros2_control.xacro  lazerbot.srdf  lazerbot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
lazerbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
